--- a/css/general.css
+++ b/css/general.css
@@ -118,3 +118,31 @@ strong {
     color: #cf711f;
     border-bottom: 1px solid transparent;
 }
+
+
+.list-icon {
+    width: 3rem;
+    height: 3rem;
+    color: #e67e22;
+}
+
+.list-item {
+    font-size: 1.8rem;
+    display: flex;
+    align-items: center;
+    gap: 1.6rem;
+}
+.list {
+    display: flex;
+    flex-direction: column;
+    list-style: none;
+    gap: 1.6rem;
+}
+
+.grid:last-child {
+    margin-bottom: 0;
+}
+
+.grid:not(:last-child) {
+    margin-bottom: 9.6rem;
+}
