--- a/css/style.css
+++ b/css/style.css
@@ -337,26 +337,6 @@ body {
 .meal-content {
     padding: 4.8rem;
 }
-
-.list-icon {
-    width: 3rem;
-    height: 3rem;
-    color: #e67e22;
-}
-
-.list-item {
-    font-size: 1.8rem;
-    display: flex;
-    align-items: center;
-    gap: 1.6rem;
-}
-.list {
-    display: flex;
-    flex-direction: column;
-    list-style: none;
-    gap: 1.6rem;
-}
-
 .all-recipes {
     text-align: center;
     font-size: 1.8rem;
@@ -419,4 +399,76 @@ body {
 
 .gallery-item {
     overflow: hidden;
+}
+
+.section-pricing {
+    padding: 9.6rem 0;
+}
+
+.plan-header {
+    text-align: center;
+    margin-bottom: 4.8rem;
+}
+
+.plan-name {
+    color: #cf711f;
+    font-weight: 600;
+    font-size: 1.8rem;
+    text-transform: uppercase;
+    letter-spacing: 0.7px;
+    margin-bottom: 3.2rem;
+}
+
+.plan-price {
+    font-size: 6.2rem;
+    font-weight: 600;
+    margin-bottom: 1.6rem;
+    color: #333333;
+}
+
+.plan-text {
+    font-size: 1.6rem;
+    line-height: 1.6;
+}
+
+.plan-price span {
+    font-size: 3rem;
+    font-weight: 500;
+    margin-right: 0.8rem;
+}
+
+.plan-sign-up {
+    text-align: center;
+    margin-top: 4.8rem;
+}
+
+.pricing-plan {
+    border-radius: 11px;
+    width: 75%;
+}
+
+.pricing-plan--starter {
+    border: 2px solid #fdf2e9;
+    justify-self: end;
+    padding: 4.6rem;
+}
+
+.pricing-plan--complete {
+    background-color: #fdf2e9;
+    position: relative;
+    padding: 4.8rem;
+    overflow: hidden;
+}
+
+.pricing-plan--complete::after {
+    content: "Best value";
+    position: absolute;
+    text-transform: uppercase;
+    font-size: 1.4rem;
+    font-weight: 600;
+    top: 6%;
+    right: -18%;
+    background-color: #ffd43b;
+    padding: 0.8rem 8rem;
+    transform: rotate(45deg);
 }
