--- a/css/general.css
+++ b/css/general.css
@@ -1,3 +1,58 @@
+/*
+01 Typography system
+
+spacing system (px)
+2 / 4 / 8 / 12 / 16 / 24 / 32 / 48 / 64 / 80 / 96 / 128
+
+font size system (px)
+10 / 12 / 14 / 16 / 18 / 20 / 24 / 30 / 36 / 44 / 52 / 62 / 74 / 86 / 98
+
+Font weights:
+Default: 400
+
+
+Line heights:
+Default: 1
+
+---COLORS
+Primary: #67e22
+
+Tints: #fdf2e9
+
+Shades: #cf711f
+
+Accents
+
+Grey: #555
+#333
+
+
+-- SHADOWS
+
+-- BORDER RADIUS
+
+-- WHITE SPACE
+*/
+
+
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
+html {
+    font-size: 62.5%;
+}
+
+body {
+    font-family: Rubik, sans-serif;
+    line-height: 1;
+    font-weight: 400;
+    color: #555;
+}
+
+
 /********************************************/
 /* GENERAL COMPONENTS*/
 /*********************************************/
