--- a/css/style.css
+++ b/css/style.css
@@ -1,57 +1,3 @@
-/*
-01 Typography system
-
-spacing system (px)
-2 / 4 / 8 / 12 / 16 / 24 / 32 / 48 / 64 / 80 / 96 / 128
-
-font size system (px)
-10 / 12 / 14 / 16 / 18 / 20 / 24 / 30 / 36 / 44 / 52 / 62 / 74 / 86 / 98
-
-Font weights:
-Default: 400
-
-
-Line heights:
-Default: 1
-
----COLORS
-Primary: #67e22
-
-Tints: #fdf2e9
-
-Shades: #cf711f
-
-Accents
-
-Grey: #555
-#333
-
-
--- SHADOWS
-
--- BORDER RADIUS
-
--- WHITE SPACE
-*/
-
-
-* {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-}
-
-html {
-    font-size: 62.5%;
-}
-
-body {
-    font-family: Rubik, sans-serif;
-    line-height: 1;
-    font-weight: 400;
-    color: #555;
-}
-
 
 
 
@@ -471,4 +417,33 @@ body {
     background-color: #ffd43b;
     padding: 0.8rem 8rem;
     transform: rotate(45deg);
+}
+
+.feature-icon {
+    color: #e67e22;
+    height: 2.4rem;
+    width: 2.4rem;
+    margin-bottom: 3.2rem;
+    padding: 1.6rem;
+    border-radius: 50%;
+    background-color: #fdf2e9;
+}
+
+.feature-title {
+    font-size: 2.4rem;
+    color: #333;
+    font-weight: 700;
+    margin-bottom:  1.6rem;
+}
+
+.feature-text {
+    font-size: 1.8rem;
+    line-height: 1.8;
+}
+
+
+.plan-details {
+    font-size: 1.6rem;
+    line-height: 1.8;
+    text-align: center;
 }
